# rmk-ergohaven

./: README.md
.github/ci/: test.sh
.github/workflows/: build.yml  user_build.yml
common/rmk-0.8.2-k04/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  README.md  build.rs
common/rmk-0.8.2-k04/src/: channel.rs  direct_pin.rs  event.rs  keyboard.rs  keymap.rs  lib.rs  matrix.rs
common/rmk-0.8.2-k04/src/ble/: mod.rs  profile.rs
common/rmk-0.8.2-k04/src/config/: mod.rs
common/rmk-0.8.2-k04/src/host/via/: keycode_convert.rs  mod.rs  vial.rs
common/rmk-0.8.2-k04/src/input_device/: battery.rs  pmw3610.rs
common/rmk-0.8.2-k04/src/input_device/adc/: nrf.rs
common/rmk-0.8.2-k04/src/keyboard/: morse.rs
common/rmk-0.8.2-k04/src/split/: driver.rs  mod.rs  peripheral.rs
common/rmk-0.8.2-k04/src/split/ble/: central.rs  peripheral.rs
common/rmk-0.8.2-k04/src/storage/: mod.rs
common/rmk-0.8.2-k04/tests/: keyboard_morse_timeout_priority_test.rs
common/rmk-macro-0.7.1-k04/: .cargo_vcs_info.json
common/rmk-macro-0.7.1-k04/src/: keyboard.rs  keyboard_config.rs
common/rmk-macro-0.7.1-k04/src/split/: peripheral.rs
common/rmk-main-upstream/rmk-config/src/: lib.rs
common/rmk-main-upstream/rmk-config/src/default_config/: event_default.toml
common/rmk-main-upstream/rmk-config/src/resolved/: build_constants.rs
common/rmk-main-upstream/rmk/src/: host_data.rs
common/rmk-main-upstream/rmk/src/event/: mod.rs  split.rs
common/rmk-main-upstream/rmk/src/host/: context.rs
common/rmk-main-upstream/rmk/src/host/via/: mod.rs
common/rmk-main-upstream/rmk/src/split/: battery.rs  driver.rs  mod.rs  peripheral.rs
common/rmk-types-0.2.2-k04/: Cargo.toml
common/rmk-types-0.2.2-k04/src/: action.rs  keycode.rs
docs/docs/main/docs/configuration/: bootloader.mdx
docs/docs/main/docs/development/: roadmap.md
docs/docs/main/docs/features/: binary_size_optimization.md
examples/use_config/nrf52810_ble/: Cargo.toml
examples/use_config/nrf52832_ble/: Cargo.toml
examples/use_config/nrf52840_ble/: Cargo.toml
examples/use_config/nrf52840_ble_split_direct_pin/: Cargo.toml
examples/use_config/nrf52840_embassy_boot/: Cargo.toml
examples/use_config/pi_pico_w_ble/: Cargo.toml
examples/use_config/pi_pico_w_ble_split/: Cargo.toml
examples/use_config/rp2040/: Cargo.toml
examples/use_config/rp2040_embassy_boot/: Cargo.toml
examples/use_config/rp2040_oled/: Cargo.toml
examples/use_config/rp2040_split/: Cargo.toml
examples/use_config/rp2040_split_pio/: Cargo.toml
examples/use_config/stm32f1/: Cargo.toml
examples/use_config/stm32f4/: Cargo.toml
examples/use_config/stm32h7/: Cargo.toml
examples/use_rust/nrf52832_ble/: Cargo.toml
examples/use_rust/nrf52840/: Cargo.toml
examples/use_rust/nrf52840_ble/: Cargo.toml
examples/use_rust/nrf52840_ble_split/: Cargo.toml
examples/use_rust/nrf52840_ble_split_dongle/: Cargo.toml
examples/use_rust/nrf52840_embassy_boot/: Cargo.toml
examples/use_rust/nrf54l15_ble/: Cargo.toml
examples/use_rust/nrf54lm20_ble/: Cargo.toml
examples/use_rust/pi_pico_w_ble/: Cargo.toml
examples/use_rust/pi_pico_w_ble_split/: Cargo.toml
examples/use_rust/py32f07x/: Cargo.toml
examples/use_rust/rp2040_direct_pin/: Cargo.toml
examples/use_rust/rp2040_embassy_boot/: Cargo.toml
examples/use_rust/rp2040_embassy_boot_split/: Cargo.toml
examples/use_rust/rp2040_oled/: Cargo.toml
examples/use_rust/rp2350/: Cargo.toml
examples/use_rust/sf32lb52x_ble/: Cargo.toml
examples/use_rust/stm32f1/: Cargo.toml
examples/use_rust/stm32g4/: Cargo.toml
examples/use_rust/stm32h7/: Cargo.toml
keyboards/imperial44/: keyboard.toml
keyboards/k03/: keyboard.toml
keyboards/k04/: Cargo.toml  README.md  build.rs  keyboard.toml  vial.json
keyboards/k04/src/: battery_nrf.rs  central.rs  deep_sleep.rs  layer_led.rs  layer_names.rs  module_settings.rs  peripheral.rs  touchpad.rs  trackball.rs  vial_settings.rs
keyboards/k04_micro/: keyboard.toml  vial.json
keyboards/k04_micro/src/: central.rs  touchpad.rs
keyboards/k04_mini/: keyboard.toml  vial.json
keyboards/k04_mini/src/: vial_settings.rs
keyboards/k04_qube/: README.md  build.rs  keyboard.toml  memory_qube.x  vial.json
keyboards/k04_qube/src/: battery_nrf.rs  qube_display.rs
keyboards/op36/: Cargo.toml  build.rs  keyboard.toml
keyboards/op36/src/: battery_nrf.rs  central.rs  peripheral.rs
keyboards/op36_qube/: build.rs  keyboard.toml  memory_halves.x  vial.json
keyboards/op36_qube/src/: battery_nrf.rs  qube_display.rs
keyboards/trackball_royale/: keyboard.toml
keyboards/trackball_royale/src/: trackball_processor.rs
keyboards/trackball_v30/: build.rs
keyboards/velvet/: keyboard.toml
keyboards/velvet_ui/: keyboard.toml
rmk/: Cargo.toml
rmk-config/: Cargo.toml
rmk-config/src/: layout.rs  lib.rs
rmk-config/src/resolved/: build_constants.rs
rmk-macro/: Cargo.toml
rmk-macro/src/codegen/: entry.rs  orchestrator.rs
rmk-macro/src/codegen/split/: peripheral.rs
rmk-types/: Cargo.toml  build.rs
rmk/src/: keyboard.rs  lib.rs  matrix.rs
rmk/src/keyboard/: combo.rs
rmk/src/matrix/: direct_pin.rs
rmk/src/split/: mod.rs  peripheral.rs
rmk/src/split/ble/: central.rs  peripheral.rs
rmk/tests/: keyboard_combo_test.rs
scripts/: build_k04_matrix.sh  check_all.sh
tools/settings_reset/: README.md
tools/settings_reset/src/: main.rs
