[package]
name = "k04"
version = "0.1.0"
description = "RMK BLE split firmware for Ergohaven K:04 (nRF52840)"
homepage = "https://github.com/eh-fws/k04-rmk"
repository = "https://github.com/eh-fws/k04-rmk"
edition = "2021"
license = "MIT OR Apache-2.0"

[features]
default = ["rmk_defmt"]
rmk_defmt = ["rmk/defmt"]
usb_debug = ["rmk/usb_log", "dep:log"]
usb_debug_force_ble = ["usb_debug", "rmk/usb_log_force_ble"]

[dependencies]
embedded-storage = "0.3"
rmk = { version = "0.8", default-features = false, features = [
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
    "storage",
    "vial",
    "vial_lock",
] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "11d5c3c", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.6", default-features = false, features = ["defmt"] }
usbd-hid = "0.9"

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-sync = "0.7.2"
embassy-nrf = { version = "0.8", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.9", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"
log = { version = "0.4", optional = true }

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"


[[bin]]
name = "central"
path = "src/central.rs"

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"

# Prevent cargo from looking for a workspace above this directory
[workspace]
members = ["."]

[patch.crates-io]
rmk = { path = "../../common/rmk-0.8.2-k04" }
rmk-macro = { path = "../../common/rmk-macro-0.7.1-k04" }
rmk-types = { path = "../../common/rmk-types-0.2.2-k04" }

[[bin]]
name = "hardreset"
path = "src/bin/hardreset.rs"
