[package]
name = "k04"
version = "0.1.0"
description = "RMK BLE split firmware for Ergohaven K:04 (nRF52840)"
homepage = "https://github.com/eh-fws/k04-rmk"
repository = "https://github.com/eh-fws/k04-rmk"
edition = "2021"
license = "MIT OR Apache-2.0"
autotests = false
autobenches = false
autoexamples = false

[features]
default = []
usb_debug = ["rmk/usb_log"]
usb_debug_force_ble = ["usb_debug"]

[dependencies]
rmk = { path = "../../rmk", default-features = false, features = [
    "usb_log",
    "storage",
    "vial",
    "nrf52840_ble",
    "split",
    "async_matrix",
    "adafruit_bl",
    "display",
] }
heapless = "0.9"
embassy-futures = "0.1"
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "peripheral",
    "central",
    "nrf52840",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "critical-section-impl",
    "nrf52840",
] }
bt-hci = { version = "0.9", default-features = false, features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt", "defmt-timestamp-uptime"] }
embassy-nrf = { version = "0.11", features = [
    "defmt",
    "nrf52840",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "1.0", features = ["print-defmt"] }
static_cell = "2"

rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }
embassy-usb-driver = "=0.2.2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"


[[bin]]
name = "central"
path = "src/central.rs"
test = false
bench = false

[[bin]]
name = "peripheral"
path = "src/peripheral.rs"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = "unwind"

[profile.release]
codegen-units = 1
debug = true
opt-level = "z"
overflow-checks = false
lto = "fat"

# Prevent cargo from looking for a workspace above this directory
[workspace]
members = ["."]

[[bin]]
name = "hardreset"
path = "src/bin/hardreset.rs"
test = false
bench = false
